// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GtfsTripMovementsInterpolator > 01: works, when the delay increases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
08:10       08:10       | 08:12 (2)   08:12 (2)   | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | 08:54 (24)  08:54 (24)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 02: works, when the delay decreases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
08:10       08:10       | 08:12 (2)   08:12 (2)   | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | 08:30 (0)   08:30 (0)   | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 03: works, when the service goes from late to early 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
08:10       08:10       | 08:12 (2)   08:12 (2)   | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | 08:24 (-6)  08:24 (-6)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 04: works, when only the termination time is given 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
08:10       08:10       | --:--       --:--       | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | --:--       --:--       | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
08:40       --:--       | 08:45 (5)   --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 05: works, when only the origination time is given 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:30 (30)  | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
08:10       08:10       | --:--       --:--       | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | --:--       --:--       | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 06: works, when arrival times differ from departure times, and delay decreases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:30 (30)  | --:--       --:--      
08:10       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | --:--       --:--       | --:--       --:--      
08:35       08:50       | --:--       --:--       | --:--       --:--      
09:00       --:--       | 09:00 (0)   --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 07: works, when arrival times differ from departure times, and delay increases over time 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       08:00 (0)   | --:--       --:--      
08:10       08:25       | --:--       --:--       | --:--       --:--      
08:30       08:30       | --:--       --:--       | --:--       --:--      
08:35       08:50       | --:--       --:--       | --:--       --:--      
09:00       --:--       | 09:30 (30)  --:--       | --:--       --:--      

"
`;

exports[`GtfsTripMovementsInterpolator > 08: works, when passing movements are included 1`] = `
"

S-ARR       S-DEP       | K-ARR       K-DEP       | A-ARR       A-DEP
--:--       08:00       | --:--       --:--       | --:--       --:--      
08:05       08:05       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:10       08:10       | 08:12 (2)   08:12 (2)   | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:15       08:15       | --:--       --:--       | --:--       --:--      
08:20       08:20       | --:--       --:--       | --:--       --:--      
08:25       08:25       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:30       08:30       | 08:54 (24)  08:54 (24)  | --:--       --:--      
08:35       08:35       | --:--       --:--       | --:--       --:--      
--:--       --:--       | --:--       --:--       | --:--       --:--      
08:40       --:--       | --:--       --:--       | --:--       --:--      

"
`;
